force-app/main/default/objects/Menu_Item__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Related_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>