force-app/main/default/objects/Menu_Item__c/fields/Offers__c.field-meta.xml
<CustomField>
    <fullName>Offers__c</fullName>
    <label>Offers</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>