force-app/main/default/objects/Menu_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Related_Order</relationshipName>
    <type>Lookup</type>
</CustomField>